--- a/price_prediction.ipynb
+++ b/price_prediction.ipynb
@@ -230,11 +230,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.to_csv('Data/Uber_Cleaned.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# linear regression - day of week, hour, passenger count, distance_miles\n"
+    "# linear regression - day of week, hour, passenger count, distance_miles"
    ]
   }
  ]
