--- a/price_prediction_preprocessing.ipynb
+++ b/price_prediction_preprocessing.ipynb
@@ -234,16 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.to_csv('Data/Uber_Cleaned.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# linear regression - day of week, hour, passenger count, distance_miles"
+    "df.to_csv('Data/Uber_Cleaned.csv')"
    ]
   }
  ]
